--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,17 +18,6 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>appl-controller</servlet-name>
-		<url-pattern>    *.do                     </url-pattern>
+		<url-pattern>    /createCustomer                     </url-pattern>
 	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>appl-controller</servlet-name>
-		<url-pattern>    /start                   </url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>   login.do                    </welcome-file>
-	</welcome-file-list>
-	<error-page>
-		<error-code>404</error-code>
-		<location>/error-404.jsp</location>
-	</error-page>
 </web-app>
