--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,10 +18,22 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>appl-controller</servlet-name>
-		<url-pattern>    /createCustomer                     </url-pattern>
+		<url-pattern>    /createCustomerAccount                     </url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>appl-controller</servlet-name>
 		<url-pattern>    /depositCheck                     </url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>appl-controller</servlet-name>
+		<url-pattern>    /requestCheck                     </url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>appl-controller</servlet-name>
+		<url-pattern>    /login                     </url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>appl-controller</servlet-name>
+		<url-pattern>    /logout                     </url-pattern>
 	</servlet-mapping>
 </web-app>
