Create cust and Create Fund fixed and tested

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,6 +20,10 @@
 		<servlet-name>appl-controller</servlet-name>
 		<url-pattern>    /createCustomerAccount                     </url-pattern>
 	</servlet-mapping>
+		<servlet-mapping>
+		<servlet-name>appl-controller</servlet-name>
+		<url-pattern>    /createFund                    </url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>appl-controller</servlet-name>
 		<url-pattern>    /depositCheck                     </url-pattern>
